# proc_control_ros2

./: CMakeLists.txt  package.xml  packageInfo.mat
config/: AUV8_config.yaml
include/proc_control/: coder_array.h  coder_bounded_array.h  multiword_types.h  proc_control.h  proc_control_private.h  proc_control_types.h  ros2nodeinterface.h  rtGetInf.h  rtGetNaN.h  rt_defines.h  rt_nonfinite.h  rtmodel.h  rtwtypes.h  slros2_generic_action.h  slros2_generic_service.h  slros2_initialize.h  slros_busmsg_conversion.h  visibility_control.h  zero_crossing_types.h
launch/: launch.py
src/: main.cpp  proc_control.cpp  proc_control_data.cpp  ros2nodeinterface.cpp  rtGetInf.cpp  rtGetNaN.cpp  rt_nonfinite.cpp  slros2_initialize.cpp  slros_busmsg_conversion.cpp
